finish header desktop

--- a/index.html
+++ b/index.html
@@ -1,16 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/favicon-32x32.png" type="image/png">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/general.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="images/favicon-32x32.png" type="image/png" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/general.css" />
     <title>Landing Page</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <div class="bg-right">
+        <svg xmlns="http://www.w3.org/2000/svg">
+          <g
+            fill="hsl(12, 88%, 59%)"
+            fill-rule="nonzero"
+            opacity=".071"
+            transform="translate(-171 -373)"
+          >
+            <rect
+              x="298"
+              y="472"
+              rx="155.215"
+              transform="scale(1 -1) rotate(-45 -1484.244 0)"
+            />
+          </g>
+        </svg>
+      </div>
+      <div class="logo">
+        <img src="images/logo.svg" alt="manage" />
+      </div>
+      <ul>
+        <li><a href="">Pricing</a></li>
+        <li><a href="">Product</a></li>
+        <li><a href="">About Us</a></li>
+        <li><a href="">Careers</a></li>
+        <li><a href="">Community</a></li>
+      </ul>
+      <div class="get-started">
+        <a class="bright-red-bg" href="">Get Started</a>
+      </div>
+      <div class="header-bottom">
+        <div class="flex">
+          <div class="wrapper">
+            <h1 class="very-dark-blue">Bring everyone together to build better products.</h1>
+            <div class="desc">
+              <p>Manage makes it simple for software teams</p>
+              <p>to plan day-to-day tasks while keeping the</p>
+              <p>larger team goals in view.</p>
+            </div>
+            <div class="get-started">
+                <a class="bright-red-bg" href="">Get Started</a>
+              </div>
+          </div>
+          <div class="wrapper">
+            <div class="chart-img">
+              <img src="images/illustration-intro.svg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
